--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity" >
+    tools:context="com.prgguru.example.HomeActivity" >
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -19,12 +19,13 @@
         android:orientation="vertical" >
 
         <TextView
+            android:id="@+id/usertitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="40dp"
-            android:text="@string/welcome_txt"
+            android:text="@string/user_title"
             android:textColor="@color/white"
-            android:textSize="45sp"
+            android:textSize="25sp"
             android:textStyle="bold" />
 
         <LinearLayout
@@ -33,24 +34,17 @@
             android:background="@drawable/bg_form_rounded"
             android:orientation="vertical" >
 
-            <EditText
+            <TextView
+                android:id="@+id/message"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:background="@null"
-                android:hint="@string/email"
-                android:padding="5dp"
-                android:singleLine="true"
-                android:id="@+id/email" android:textColor="@color/black"/>
+                android:hint="@string/defaultmsg"
+                android:padding="10dp"
+                android:textColor="@color/black"
+                android:textSize="20dp" />
         </LinearLayout>
-
-        <Button
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
-            android:background="@drawable/bg_button_rounded"
-            android:text="@string/login"
-            android:textColor="@color/white" android:onClick="RegisterUser"/>
     </LinearLayout>
 
 </RelativeLayout>
